--- a/immo.components/docker-compose.yml
+++ b/immo.components/docker-compose.yml
@@ -16,4 +16,15 @@ services:
     - ../immo-api-php:/var/www
 working_dir: /var/www/
 networks:
+depends_on:
+  -
 
+
+
+  ## service administration des bases sql ##
+  adminer:
+    image: adminer
+    ports:
+      - '8080:8080'
+    networks:
+      - 
