--- a/immo.components/docker-compose.yml
+++ b/immo.components/docker-compose.yml
@@ -11,8 +11,8 @@ services:
     ports:
       - '8080:80'
     volumes:
-      - ../immo-api-php/public:/var/www/html
-      - ../immo-api-php:/var/www
+      - ../public:/var/www/html
+      - ..:/var/www
     working_dir: /var/www/
     networks:
       - immo.net
@@ -29,6 +29,14 @@ services:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: mydatabase
       MYSQL_PASSWORD: password
+    networks:
+      - immo.net
+
+  ## Adminer service ##
+  adminer:
+    image: adminer
+    ports:
+      - '8081:8080'
     networks:
       - immo.net
 
